--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "phavuer",
-  "version": "0.12.1",
-  "description": "Reactive template engine based on Vue 3 for Phaser 3",
+  "name": "direction-idle",
+  "version": "0.0.1",
+  "description": "Idle game PoC for innovation day",
   "main": "src/index.js",
   "types": "types/phavuer.d.ts",
-  "author": "Laineus",
+  "author": "chris-guilliams",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/laineus/phavuer.git"
-  },
+  "repository": "https://github.com/chris-guilliams/phavuer",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "vite:dev": "vite",
+    "vite:build": "vite build",
+    "serve": "vite preview"
   },
   "peerDependencies": {
     "phaser": "^3.55.2",
     "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.2.31",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "vite": "^4.2.1",
     "vue-loader": "^16.8.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
+  },
+  "private": false,
+  "dependencies": {
+    "phaser": "^3.55.2",
+    "phavuer": "^0.12.1",
+    "vue": "^3.2.36"
   }
 }
